--- a/ess-stm32-counter.ioc
+++ b/ess-stm32-counter.ioc
@@ -20,8 +20,7 @@ Mcu.Pin14=PB7
 Mcu.Pin15=VP_SYS_VS_ND
 Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM1_VS_OPM
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -30,7 +29,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=20
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103T6Ux
@@ -38,6 +37,8 @@ MxCube.Version=5.3.0
 MxDb.Version=DB.5.0.30
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -46,6 +47,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Output
@@ -71,8 +73,12 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_ModeDefaultEXTI
+PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB0.Locked=true
 PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_ModeDefaultEXTI
+PB1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB1.Locked=true
 PB1.Signal=GPXTI1
 PB7.Locked=true
@@ -124,11 +130,12 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-TIM1.IPParameters=Prescaler,Period
-TIM1.Period=1000
+TIM1.IPParameters=Prescaler,Period,RepetitionCounter
+TIM1.Period=3000
 TIM1.Prescaler=7999
+TIM1.RepetitionCounter=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=3000
+TIM2.Period=1000
 TIM2.Prescaler=7999
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
@@ -136,8 +143,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM1_VS_OPM.Mode=OPM_bit
-VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
